--- a/Dockerfile.cuda118
+++ b/Dockerfile.cuda118
@@ -1,4 +1,4 @@
-FROM jupyter/datascience-notebook:2023-08-14
+FROM jupyter/datascience-notebook:2023-09-11
 
 LABEL maintainer="Joshua L. Phillips <https://www.cs.mtsu.edu/~jphillips/>"
 LABEL release-date="2023-08-14"
@@ -126,7 +126,7 @@ USER root
 RUN python -c "import nltk; nltk.download('all','/usr/local/share/nltk_data')"
 
 # Custom hook to setup home directory
-RUN mkdir /usr/local/bin/before-notebook.d
+RUN mkdir -p /usr/local/bin/before-notebook.d
 COPY config-home.sh /usr/local/bin/before-notebook.d/.
 
 # Set system to use libraries in
