--- a/Dockerfile.latest
+++ b/Dockerfile.latest
@@ -9,11 +9,18 @@ RUN echo -e "y\ny" | unminimize
 
 # Additional tools
 RUN apt-get update && \
+    apt-get dist-upgrade -y && \
+    apt-get install -y software-properties-common && \
+    add-apt-repository -y ppa:apptainer/ppa && \
+    apt-get update && \
     apt-get install -y \
+    apptainer \
     autoconf \
+    bison \
     curl \
     emacs-nox \
     enscript \
+    flex \
     g++ \
     gcc \
     gdb \
@@ -138,11 +145,9 @@ COPY patches/firefox.gpg /etc/apt/trusted.gpg.d/.
 COPY patches/firefox.list /etc/apt/sources.list.d/.
 RUN apt-get update && \
     apt-get install -y \
-    bison \
     default-jre \
     dbus-x11 \
     firefox-esr \
-    flex \
     xfce4 \
     xfce4-panel \
     xfce4-session \
