--- a/Dockerfile.2025-08-08-p1
+++ b/Dockerfile.2025-08-08-p1
@@ -15,7 +15,8 @@ RUN apt-get update && \
     && \
     apt-get autoremove -y && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* \
+    rm -rf /home/jovyan/.cache
 
 # Install as user
 USER $NB_UID
